--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ h4 {
 }
 
 .nav-container {
+    margin: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
