--- a/style.css
+++ b/style.css
@@ -176,8 +176,8 @@ h1, h2, h3, h4 {
 }
 
 .hero-img {
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
   
     object-fit: cover;
     border-radius: 50%;
@@ -325,7 +325,7 @@ h1, h2, h3, h4 {
 .ceo-image img {
     width: 180px;
     height: 180px;
-    border-radius: 20px;
+    border-radius: 60px;
     margin: 0 auto 20px;
     object-fit: cover;
     border: 3px solid #09852a;
@@ -403,7 +403,7 @@ h1, h2, h3, h4 {
 } 
 
 .featured-list{
-    padding-right: 40px;
+   padding: 20px;
 }
 
 
@@ -417,3 +417,6 @@ html, body {
     padding-right: 60px;
 }
  
+.hero h2{
+    padding: 20px;
+}
