--- a/style.css
+++ b/style.css
@@ -140,14 +140,15 @@ h1, h2, h3, h4 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
-    padding: 150px 0 60px; 
+    padding: 150px 0 70px; 
     min-height: 80vh;
 }
-
 .hero-content h1 {
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     line-height: 1.2;
+    padding-right: 60px;
     margin-bottom: 20px;
+
 }
 
 .hero-content p {
@@ -410,9 +411,9 @@ html, body {
     position: relative;
 }
 
-.hero-content{
-    padding-right: 70px;
-}
+/* .hero-content{
+    padding-right: 70px; 
+} */
 .hero-content h1{
     padding-left: 20px;
 }
